<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Wake Up Now</string>
    <string name="button_popup_create_label">Create alert</string>
    <string name="button_popup_delete_label">Delete alert</string>
    <string name="no_results_returned">No results returned.</string>
    <string name="searching">Searching…</string>
    <string name="hint_title">Title</string>
    <string name="hint_snippet">Snippet</string>
    <string name="button_popup_save_label">Save changes</string>
    <string name="changes_saved">Changes saved.</string>
    <string name="alert_removed">Alert removed.</string>
    <string name="alert_added">Alert added.</string>
    <string name="error_saving_alert">Error saving alert!</string>
    <string name="error_removing_alert">Error removing alert!</string>
    <string name="error_saving_changes">Error saving changes!</string>
    <string name="no_alerts_to_show">No alerts to show.</string>
    <string name="confirm_remove">Remove alert?</string>
    <string name="confirm_save">Save changes?</string>
    <string name="api_key_debug">0A19afdIbyAvK-T4zkmx8oFN6mwOODNUSa9-Ynw</string>

</resources>