<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:background="@drawable/popup_bg"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="15dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp" >

    <EditText
        android:id="@+id/text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_title"
        android:inputType="textMultiLine"
        android:minWidth="100dp"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/text_snippet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_snippet"
        android:inputType="textMultiLine"
        android:minWidth="100dp"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/button_create"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@drawable/popup_button_bg"
        android:text="@string/button_popup_create_label" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@drawable/popup_button_bg"
        android:text="@string/button_popup_save_label" />

    <Button
        android:id="@+id/button_delete"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/popup_button_bg"
        android:text="@string/button_popup_delete_label" />

</LinearLayout>